--- a/TravelApp/MainWindow.xaml
+++ b/TravelApp/MainWindow.xaml
@@ -1,11 +1,16 @@
 ﻿<Window x:Class="TravelApp.MainWindow"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelApp"
         mc:Ignorable="d"
-        Title="TravelApp" Height="450" Width="800">
+        Title="TravelApp" Height="450" Width="800"
+        Style="{StaticResource AllWindows}"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        ResizeMode="CanMinimize"
+        WindowStartupLocation="CenterScreen">
     <Grid>
 
     </Grid>
