--- a/TravelApp/App.xaml
+++ b/TravelApp/App.xaml
@@ -11,6 +11,11 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <Style x:Key="AllWindows"
+                   TargetType="{x:Type Window}">
+                <Setter Property="FontSize"
+                        Value="14" />
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
