--- a/TravelApp/App.xaml
+++ b/TravelApp/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="TravelApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TravelApp"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:TravelApp">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -11,10 +10,11 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <!-- you can define your global styles here </-->
             <Style x:Key="AllWindows"
                    TargetType="{x:Type Window}">
                 <Setter Property="FontSize"
-                        Value="14" />
+                        Value="20" />
             </Style>
         </ResourceDictionary>
     </Application.Resources>
