--- a/TravelApp/MainWindow.xaml
+++ b/TravelApp/MainWindow.xaml
@@ -4,14 +4,23 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:views="clr-namespace:TravelApp.DesktopHost.View"
+        xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel"
         xmlns:local="clr-namespace:TravelApp"
         mc:Ignorable="d"
-        Title="TravelApp" Height="450" Width="800"
+        Title="TravelApp"
+        Width="{x:Static SystemParameters.PrimaryScreenWidth}"  
+        Height="{x:Static SystemParameters.PrimaryScreenHeight}"
         Style="{StaticResource AllWindows}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         ResizeMode="CanMinimize"
         WindowStartupLocation="CenterScreen">
     <Grid>
+        <Grid.Resources>
+            <DataTemplate DataType="{x:Type viewmodels:LoginViewModel}">
+                <views:LoginView />
+            </DataTemplate>
+        </Grid.Resources>
         <ContentControl Content="{Binding CurrentViewModel}" />
     </Grid>
 </Window>
