--- a/TravelApp/DesktopHost/View/LoginView.xaml
+++ b/TravelApp/DesktopHost/View/LoginView.xaml
@@ -3,8 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:TravelApp.DesktopHost.View"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel"
         mc:Ignorable="d"
         Background="White"
@@ -13,6 +13,8 @@
         d:DataContext="{d:DesignInstance Type=viewmodels:LoginViewModel}">
     <Grid>
         <Label Padding="150px">Welcome to Login Page!</Label>
-        <Button> Go to Sign Up Page</Button>
+        <Button
+            Command="{Binding Signup}">
+            Go to Sign Up Page</Button>
     </Grid>
 </UserControl>
