--- a/TravelApp/App.xaml
+++ b/TravelApp/App.xaml
@@ -15,6 +15,8 @@
                    TargetType="{x:Type Window}">
                 <Setter Property="FontSize"
                         Value="20" />
+                <Setter Property="FontFamily"
+                        Value="/Style/Fonts/Poppins/#Poppins" />
             </Style>
         </ResourceDictionary>
     </Application.Resources>
