--- a/TravelApp/App.xaml
+++ b/TravelApp/App.xaml
@@ -19,6 +19,33 @@
                 <Setter Property="FontFamily"
                         Value="/Style/Fonts/Poppins/#Poppins" />
             </Style>
+
+            <Style TargetType="Button" x:Key="FormButton">
+                <Setter Property="TextBlock.TextAlignment" Value="Center" />
+                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="FontFamily" Value="Poppins"/>
+                <Setter Property="Background" Value="#4889E6"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border Background="{TemplateBinding Background}" BorderBrush="#4889E6" BorderThickness="1">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                <Style.Triggers>
+                    <Trigger Property="IsMouseCaptured" Value="True">
+                        <Setter Property="Background" Value="#80AAE8"/>
+                    </Trigger>
+                </Style.Triggers>
+                <Style.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="20,20,20,20" />
+                    </Style>
+                </Style.Resources>
+            </Style>
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
