--- a/TravelApp/DesktopHost/View/LoginView.xaml
+++ b/TravelApp/DesktopHost/View/LoginView.xaml
@@ -14,16 +14,18 @@
     <Grid>
 
         <Grid.RowDefinitions>
+            <RowDefinition Height="1.5*"></RowDefinition>
             <RowDefinition Height="2.5*"></RowDefinition>
-            <RowDefinition Height="1*"></RowDefinition>
-            <RowDefinition Height="0.5*"></RowDefinition>
-            <RowDefinition Height="3*"></RowDefinition>
-            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="1.2*"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="1.5*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"></ColumnDefinition>
-            <ColumnDefinition Width="3*"></ColumnDefinition>
-            <ColumnDefinition Width="3*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="auto"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
         <TextBlock FontSize="60"
@@ -32,51 +34,101 @@
                    Grid.Row="1"
                    Grid.Column="1"
                    FontWeight="Medium"
-                   Text="Welcome to Travel App!"></TextBlock>
-        <StackPanel Grid.Row="3"
+                   FontFamily="Poppins"
+                   MaxWidth="439">
+            Welcome to <LineBreak/> Travel App!</TextBlock>
+        <StackPanel Grid.Row="2"
                     Grid.Column="1"
                     Width="439"
-                    Height="50"
-                    Margin="0,30,0,0"
-                    VerticalAlignment="Top">
-            <TextBox Style="{StaticResource MaterialDesignFilledTextBox}"
-                     VerticalAlignment="Top"
-                     TextWrapping="NoWrap"
-                     FontSize="12"
+                    Height="90"
+                    Margin="0,0,0,20">
+            <Label Margin="0 0 0 3"
+                   Height="27"
+                   FontSize="18"
+                   FontFamily="Poppins"
+                   FontWeight="Regular"
+                   HorizontalAlignment="Left">Email</Label>
+            <TextBox Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                     FontSize="15"
+                     Margin="0"
                      materialDesign:HintAssist.Hint="name@domain.com"
+                     materialDesign:HintAssist.Foreground="#4889E6"
                      Background="#A5FFFFFF"
                      materialDesign:TextFieldAssist.UnderlineBrush="#4889E6"
-                     Text="{Binding Email}">
-
-                <TextBox.SelectionBrush>
-                    <ImageBrush />
-                </TextBox.SelectionBrush>
+                     Text="{Binding Email}" TextChanged="TextBox_TextChanged">
             </TextBox>
         </StackPanel>
         <StackPanel Grid.Row="3"
                     Grid.Column="1"
                     Width="439"
-                    Height="50"
-                    Margin="0,60,0,0">
-
+                    Height="90"
+                    Margin="0,10,0,0">
+            <Label Margin="0"
+                   Height="27"
+                   FontSize="18"
+                   FontFamily="Poppins"
+                   FontWeight="Regular"
+                   HorizontalAlignment="Left">Password</Label>
             <PasswordBox x:Name="passwordBox"
-                 Style="{StaticResource MaterialDesignFilledPasswordBox}"
-                 VerticalAlignment="Top"
-                 FontSize="12"
+                 Style="{StaticResource MaterialDesignOutlinedPasswordBox}"
+                 FontSize="15"
+                 Margin="0"
                  materialDesign:TextFieldAssist.UnderlineBrush="#4889E6"
                  Background="#A5FFFFFF" />
         </StackPanel>
 
         <Button Grid.Column="1"
                 Grid.Row="4"
-                Style="{StaticResource MaterialDesignFlatSecondaryDarkBgButton}"
+                VerticalAlignment="Bottom"
                 Width="439"
+                Height="40"
                 ToolTip="Log in to your account"
-                Content="Log in"
-                Background="#4889E6"
-                BorderBrush="#4889E6"
-                Command="{Binding Submit}"
-                IsDefault="True" />
+                Content="Login"
+                Style="{StaticResource FormButton}"
+                Command="{Binding Login}"
+                IsDefault="True" Cursor="Hand" >
+            <Button.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="7"/>
+                </Style>
+            </Button.Resources>
+        </Button>
+        <StackPanel Grid.Column="1"
+                    Grid.Row="5"
+                    Width="439"
+                    Height="80">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Label HorizontalAlignment="Center"
+                       Grid.Column="0"
+                       FontSize="20"
+                       Margin="50, 10, 0, 0"
+                       Foreground="#808080"
+                       FontFamily="Poppins"
+                       FontWeight="Medium">No account ?</Label>
+                <Button Grid.Column="1"
+                        Command="{Binding Signup}">
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <ContentPresenter />
+                        </ControlTemplate>
+                    </Button.Template>
+                    <TextBlock HorizontalAlignment="Center"
+                       FontSize="20"
+                       Margin="0, 10, 50, 0"
+                       Foreground="#4889E6" 
+                       Background="#DFE6F0"
+                       FontFamily="Poppins" 
+                       FontWeight="Medium" Cursor="Hand"
+                       TextDecorations="Underline"
+                       Text="Sign up"/>
+                </Button>
+            </Grid>
+           
+        </StackPanel>
 
     </Grid>
 </UserControl>
