--- a/TravelApp/DesktopHost/View/LoginView.xaml
+++ b/TravelApp/DesktopHost/View/LoginView.xaml
@@ -8,8 +8,7 @@
         xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel"
         mc:Ignorable="d"
         Background="#DFE6F0"
-        Width="{x:Static SystemParameters.PrimaryScreenWidth}"  
-        Height="{x:Static SystemParameters.PrimaryScreenHeight}"
+        SizeChanged="Window_SizeChanged"
         d:DataContext="{d:DesignInstance Type=viewmodels:LoginViewModel}">
     <Grid>
 
@@ -28,18 +27,19 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <TextBlock FontSize="60"
+        <TextBlock FontSize="{Binding TextFontSize}"
                    Foreground="#161A25"
                    TextAlignment="Left"
                    Grid.Row="1"
                    Grid.Column="1"
                    FontWeight="Medium"
                    FontFamily="Poppins"
-                   MaxWidth="439">
+                   MaxWidth="439"
+                   x:Name="Title">
             Welcome to <LineBreak/> Travel App!</TextBlock>
         <StackPanel Grid.Row="2"
                     Grid.Column="1"
-                    Width="439"
+                    Width="{Binding Width}"
                     Height="90"
                     Margin="0,0,0,20">
             <Label Margin="0 0 0 3"
@@ -55,12 +55,12 @@
                      materialDesign:HintAssist.Foreground="#4889E6"
                      Background="#A5FFFFFF"
                      materialDesign:TextFieldAssist.UnderlineBrush="#4889E6"
-                     Text="{Binding Email}" TextChanged="TextBox_TextChanged">
+                     Text="{Binding Email}">
             </TextBox>
         </StackPanel>
         <StackPanel Grid.Row="3"
                     Grid.Column="1"
-                    Width="439"
+                    Width="{Binding Width}"
                     Height="90"
                     Margin="0,10,0,0">
             <Label Margin="0"
@@ -80,7 +80,7 @@
         <Button Grid.Column="1"
                 Grid.Row="4"
                 VerticalAlignment="Bottom"
-                Width="439"
+                Width="{Binding Width}"
                 Height="40"
                 ToolTip="Log in to your account"
                 Content="Login"
@@ -95,17 +95,17 @@
         </Button>
         <StackPanel Grid.Column="1"
                     Grid.Row="5"
-                    Width="439"
+                    Width="{Binding Width}"
                     Height="80">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <Label HorizontalAlignment="Center"
+                <Label HorizontalAlignment="Right"
                        Grid.Column="0"
                        FontSize="20"
-                       Margin="50, 10, 0, 0"
+                       Margin="0, 10, 10, 0"
                        Foreground="#808080"
                        FontFamily="Poppins"
                        FontWeight="Medium">No account ?</Label>
@@ -116,9 +116,9 @@
                             <ContentPresenter />
                         </ControlTemplate>
                     </Button.Template>
-                    <TextBlock HorizontalAlignment="Center"
+                    <TextBlock HorizontalAlignment="Left"
                        FontSize="20"
-                       Margin="0, 10, 50, 0"
+                       Margin="10, 10, 0, 0"
                        Foreground="#4889E6" 
                        Background="#DFE6F0"
                        FontFamily="Poppins" 
