--- a/TravelApp/DesktopHost/View/ClientNavigationView.xaml
+++ b/TravelApp/DesktopHost/View/ClientNavigationView.xaml
@@ -20,110 +20,127 @@
                 Background="#DFE6F0"
         >
         <TabItem Width="150"
-                 Background="#DFE6F0">
+                 Height="50">
             <TabItem.Header>
                 <StackPanel Width="auto"
                             Height="auto">
                     <Button Width="150"
                             Content="Trips"
+                            ToolTip="Check out trips we offer"
                             Background="Transparent"
                             Foreground="#000000"
                             BorderBrush="Transparent"
                             Padding="-4"
-                            Height="70"
+                            FontSize="20"
+                            FontWeight="Bold"
                             BorderThickness="0,0,0,0" />
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
-        <TabItem Width="170">
+        <TabItem Width="170" Height="50">
             <TabItem.Header>
                 <StackPanel Width="auto"
                             Height="auto">
                     <Button Width="170"
                             Content="Attractions"
+                            ToolTip="Check out attractions"
                             Background="Transparent"
                             Foreground="Black"
                             BorderBrush="Transparent"
                             Padding="-4"
-                            Height="70"
+                            FontSize="20"
+                            FontWeight="Bold"
                             BorderThickness="0,0,0,0" />
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
-        <TabItem Width="170">
+        <TabItem Width="170"
+                 Height="50">
             <TabItem.Header>
                 <StackPanel Width="auto"
                             Height="auto">
                     <Button Width="170"
                             Content="Stay&amp;Eat"
+                            ToolTip="Check out restaurants and accommodations"
                             Background="Transparent"
                             Foreground="Black"
                             BorderBrush="Transparent"
                             Padding="-4"
-                            Height="70"
+                            FontSize="20"
+                            FontWeight="Bold"
                             BorderThickness="0,0,0,0" />
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
-        <TabItem Width="170">
+        <TabItem Width="170"
+                 Height="50">
             <TabItem.Header>
                 <StackPanel Width="auto"
                             Height="auto">
                     <Button Width="170"
                             Content="My Trips"
+                            ToolTip="Check out bought trips"
                             Background="Transparent"
                             Foreground="Black"
                             BorderBrush="Transparent"
                             Padding="-4"
-                            Height="70"
+                            FontSize="20"
+                            FontWeight="Bold"
                             BorderThickness="0,0,0,0" />
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
-        <TabItem Width="170">
+        <TabItem Width="170"
+                 Height="50">
             <TabItem.Header>
                 <StackPanel Width="auto"
                             Height="auto">
                     <Button Width="170"
                             Content="My Reservations"
+                            ToolTip="Check out your reservations"
                             Background="Transparent"
                             Foreground="Black"
                             BorderBrush="Transparent"
                             Padding="-4"
-                            Height="70"
+                            FontSize="20"
+                            FontWeight="Bold"
                             BorderThickness="0,0,0,0" />
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
 
-        <TabItem Width="170">
+        <TabItem Width="170"
+                 Height="50">
             <TabItem.Header>
                 <StackPanel Width="auto"
                             Height="auto">
                     <Button Style="{StaticResource MaterialDesignFlatSecondaryDarkBgButton}"
                             Width="170"
-                            ToolTip="Log out from your account"
                             Content="Help"
-                            Background="#DFE6F0"
+                            ToolTip="Need help? Click me!"
+                            Background="Transparent"
                             Foreground="Black"
                             BorderBrush="#6680DEEA"
-                            Height="72" />
+                            FontSize="20"
+                            FontWeight="Bold" />
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
-        <TabItem Width="100"
+        <TabItem Width="120"
                  Height="32"
-                 Margin="110 0 0 0">
+                 Margin="95 0 0 0">
         <TabItem.Header>
             <StackPanel Width="auto"
                             Height="auto">
                 <Button Style="{StaticResource MaterialDesignFlatSecondaryDarkBgButton}"
-                            Width="100"
+                            Width="120"
                             ToolTip="Log out from your account"
                             Content="Log Out"
                             Background="#DFE6F0"
                             Foreground="Black"
                             BorderBrush="#6680DEEA"
+                            FontSize="20"
+                            FontWeight="Bold"
                             Height="32" />
             </StackPanel>
         </TabItem.Header>
