--- a/TravelApp/MainWindow.xaml
+++ b/TravelApp/MainWindow.xaml
@@ -20,8 +20,8 @@
             <DataTemplate DataType="{x:Type viewmodels:SignupViewModel}">
                 <views:SignupView />
             </DataTemplate>
-            <DataTemplate DataType="{x:Type viewmodels:NavigationViewModel}">
-                <views:NavigationView />
+            <DataTemplate DataType="{x:Type viewmodels:ClientNavigationViewModel}">
+                <views:ClientNavigationView/>
             </DataTemplate>
         </Grid.Resources>
         <ContentControl Content="{Binding CurrentViewModel}" />
