--- a/TravelApp/DesktopHost/View/Navigation/AgentNavigationView.xaml
+++ b/TravelApp/DesktopHost/View/Navigation/AgentNavigationView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="TravelApp.DesktopHost.View.ClientNavigationView"
+﻿<UserControl x:Class="TravelApp.DesktopHost.View.AgentNavigationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,9 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:navigation="clr-namespace:TravelApp.DesktopHost.ViewModel.Navigation" xmlns:viewmodel="clr-namespace:TravelApp.DesktopHost.ViewModel"
-             d:DataContext="{d:DesignInstance Type=viewmodel:ClientNavigationViewModel}">
-
+             xmlns:navigation="clr-namespace:TravelApp.DesktopHost.ViewModel.Navigation"
+             xmlns:viewmodel="clr-namespace:TravelApp.DesktopHost.ViewModel"
+             d:DataContext="{d:DesignInstance Type=viewmodel:AgentNavigationViewModel}">
+    
     <TabControl Name="navigation"
                 materialDesign:NavigationRailAssist.ShowSelectionBackground="True"
                 SnapsToDevicePixels="True"
@@ -81,7 +82,7 @@
                     <Button 
                         Width="190"
                         Height="50"
-                        Content="My Trips"
+                        Content="Sold Trips"
                         ToolTip="Check out bought trips"
                         Background="Transparent"
                         BorderBrush="Transparent"
@@ -99,7 +100,7 @@
                     <Button 
                         Width="190"
                         Height="50"
-                        Content="My Reservations"
+                        Content="Reservations"
                         ToolTip="Check out your reservations"
                         Background="Transparent"
                         BorderBrush="Transparent"
@@ -131,8 +132,8 @@
         <TabItem Width="190"
                  Height="50"
                  Margin="50 0 0 0">
-        <TabItem.Header>
-            <StackPanel Width="auto"
+            <TabItem.Header>
+                <StackPanel Width="auto"
                             Height="auto">
                     <Button 
                         Width="190"
@@ -146,8 +147,7 @@
                         FontWeight="Bold"
                         Command="{Binding LogOut}"/>
                 </StackPanel>
-        </TabItem.Header>
+            </TabItem.Header>
         </TabItem>
     </TabControl>
-
 </UserControl>
