--- a/TravelApp/DesktopHost/View/Navigation/AgentNavigationView.xaml
+++ b/TravelApp/DesktopHost/View/Navigation/AgentNavigationView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TravelApp.DesktopHost.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
+             d:DesignHeight="50" d:DesignWidth="800"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:navigation="clr-namespace:TravelApp.DesktopHost.ViewModel.Navigation"
              xmlns:viewmodel="clr-namespace:TravelApp.DesktopHost.ViewModel"
@@ -131,7 +131,7 @@
         </TabItem>
         <TabItem Width="190"
                  Height="50"
-                 Margin="50 0 0 0">
+                 Margin="30 0 0 0">
             <TabItem.Header>
                 <StackPanel Width="auto"
                             Height="auto">
@@ -144,8 +144,7 @@
                         BorderBrush="Transparent"
                         Foreground="#000000"
                         FontSize="20"
-                        FontWeight="Bold"
-                        Command="{Binding LogOut}"/>
+                        FontWeight="Bold"/>
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
