--- a/TravelApp/MainWindow.xaml
+++ b/TravelApp/MainWindow.xaml
@@ -26,6 +26,9 @@
             <DataTemplate DataType="{x:Type viewmodels:AgentNavigationViewModel}">
                 <views:AgentNavigationView/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type viewmodels:AgentTripsViewModel}">
+                <views:AgentTripsView/>
+            </DataTemplate>
         </Grid.Resources>
         <ContentControl Content="{Binding CurrentViewModel}" />
     </Grid>
