--- a/TravelApp/DesktopHost/View/LoginView.xaml
+++ b/TravelApp/DesktopHost/View/LoginView.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:TravelApp.DesktopHost.View"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel"
+        xmlns:views="clr-namespace:TravelApp.DesktopHost.View"
         mc:Ignorable="d"
         Background="#DFE6F0"
         SizeChanged="Window_SizeChanged"
@@ -27,15 +28,23 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
+
+        <materialDesign:Snackbar MessageQueue="{Binding SnackbarMessageQueue}"
+                                 Grid.Row="6"
+                                 Grid.Column="1"
+                                 Margin="0,0,0,20">
+            <materialDesign:SnackbarMessage Content="{Binding SnackbarMessageQueue}" />
+        </materialDesign:Snackbar>
+
         <TextBlock FontSize="{Binding TextFontSize}"
-                   Foreground="#161A25"
-                   TextAlignment="Left"
-                   Grid.Row="1"
-                   Grid.Column="1"
-                   FontWeight="Medium"
-                   FontFamily="Poppins"
-                   MaxWidth="439"
-                   x:Name="Title">
+                Foreground="#161A25"
+                TextAlignment="Left"
+                Grid.Row="1"
+                Grid.Column="1"
+                FontWeight="Medium"
+                FontFamily="Poppins"
+                MaxWidth="439"
+                x:Name="Title">
             Welcome to <LineBreak/> Travel App!</TextBlock>
         <StackPanel Grid.Row="2"
                     Grid.Column="1"
@@ -47,7 +56,7 @@
                    FontSize="18"
                    FontFamily="Poppins"
                    FontWeight="Regular"
-                   HorizontalAlignment="Left">Email</Label>
+                   HorizontalAlignment="Left">Email*</Label>
             <TextBox Style="{StaticResource MaterialDesignOutlinedTextBox}"
                      FontSize="15"
                      Margin="0"
@@ -55,6 +64,7 @@
                      materialDesign:HintAssist.Foreground="#4889E6"
                      Background="#A5FFFFFF"
                      materialDesign:TextFieldAssist.UnderlineBrush="#4889E6"
+                     ToolTip="Enter email address associated with your account"
                      Text="{Binding Email}">
             </TextBox>
         </StackPanel>
@@ -68,13 +78,9 @@
                    FontSize="18"
                    FontFamily="Poppins"
                    FontWeight="Regular"
-                   HorizontalAlignment="Left">Password</Label>
-            <PasswordBox x:Name="passwordBox"
-                 Style="{StaticResource MaterialDesignOutlinedPasswordBox}"
-                 FontSize="15"
-                 Margin="0"
-                 materialDesign:TextFieldAssist.UnderlineBrush="#4889E6"
-                 Background="#A5FFFFFF" />
+                   HorizontalAlignment="Left">Password*</Label>
+            <views:BindablePasswordBox 
+                 Password="{Binding Password}"/>
         </StackPanel>
 
         <Button Grid.Column="1"
@@ -82,7 +88,7 @@
                 VerticalAlignment="Bottom"
                 Width="{Binding Width}"
                 Height="40"
-                ToolTip="Log in to your account"
+                ToolTip="Click to log in to your account"
                 Content="Login"
                 Style="{StaticResource FormButton}"
                 Command="{Binding Login}"
@@ -122,6 +128,7 @@
                        Foreground="#4889E6" 
                        Background="#DFE6F0"
                        FontFamily="Poppins" 
+                       ToolTip="Go to sign up page"
                        FontWeight="Medium" Cursor="Hand"
                        TextDecorations="Underline"
                        Text="Sign up"/>
