--- a/TravelApp/DesktopHost/View/BindablePasswordBox.xaml
+++ b/TravelApp/DesktopHost/View/BindablePasswordBox.xaml
@@ -14,5 +14,6 @@
                  Margin="0"
                  materialDesign:TextFieldAssist.UnderlineBrush="#4889E6"
                  Background="#A5FFFFFF"
-                 ToolTip="Enter password associated with your account"/>
+                 ToolTip="Enter password associated with your account"
+                 PreviewTextInput="TextBox_PreviewTextInputPassword"/>
 </UserControl>
